--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,248 @@
-.App {
-  text-align: center;
+.overlay {
+  position: relative;
+  left: 0;
+  top: 0;
+  /*background-image: url("./static/background.jpg");*/
+  background-color: darkslategrey;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.home {
+  position: relative;
+  left: 0;
+  top: 0;
+  background-color: grey;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  overflow: hidden;
+  display: flex;
+  flex-direction: column;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+.cover{
+  position: relative;
+  width: 100%;
+  height: 500px;
+  left: 0;
+  top: 0;
+  background-image: url("./static/cover.jpg");
+  background-size: cover;
+  background-color: grey;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+
+.logo-write{
+  width: 100%;
+  height: 200px;
+  color: white;
+  font-size: 3em;
+}
+
+.gallery {
+  background-color: #d4dbe0;
+  width: 100%;
+  flex-direction: column;
+}
+.gallery-title{
+  color: black;
+  padding-top: 20px;
+  font-size: 2em;
+}
+.gallery-element {
+  flex-direction: row;
+  margin-top: 2%;
+  margin-bottom: 3%;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+}
+.gallery-element img{
+  width: 40%;
+  transition: all .3s ease-in-out;
+  border-radius: 25px;
+}
+.gallery-element img:hover{
+  transform: scale(1.1);
+  cursor: pointer;
+}
+.gallery-element p{
+  color: black;
+  width: 25%;
+  font-size: 1.5em;
+  transition: all .3s ease-in-out;
+}
+.gallery-element p:hover{
+  transform: scale(1.1);
+  cursor: pointer;
+}
+
+.whoarewe{
+  width: 100%;
+  height: 200px;
+  color: white;
+  font-size: 2.5em;
+}
+
+.whoarewe-row{
+  margin-bottom: 5%;
+}
+
+.whoarewe-row p{
+  color: white;
+  width: 30%;
+  font-size: 1.5em;
+}
+
+.whoarewe-row img{
+  width: 30%;
+  transition: all .3s ease-in-out;
+  border-radius: 25px;
+  margin-right: 10%;
+}
+
+.btn-enter{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  border-radius: 5px;
+  color: #7c795d; font-family: 'Trocchi', serif; font-size: 45px; font-weight: normal; line-height: 48px; margin: 0;
+}
+
+.dFlex {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.link{
+  text-decoration: inherit;
+}
+
+
+
+
+li{
+  font-size: 14px;
+  margin-left: 15px;
+  padding: 10px;
+  box-sizing: border-box;
+  cursor: pointer;
+  float: left;
+}
+.fa{
+  cursor: pointer;
+  margin-left: 15px;
+}
+
+.main-content{
+  background-color: grey;
+  position: relative;
+  width: 100%;
+  height: 100%;
+  padding: 50px 0 0;
+  box-sizing: border-box;
+  flex-wrap: wrap;
+}
+
+.h3{
+  position: fixed;
+  left: 40px;
+  top: 55px;
+  color:#7c795d;
+  font-size: 10.5vw;
+  z-index: 2;
+}
+
+.card{
+  width: 27%;
+  border-radius: 15px;
+  flex-direction: column;
+  position: relative;
+  transform: scale(.8);
+  transition: all .3s ease-in-out;
+  margin-bottom: 50px;
+  padding-top: 20px;
+  z-index: 3;
+}
+@media screen and (max-width: 960px) {
+  .card{
+    width: 75%
   }
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
+.card:hover {
+  background-color: rgba(124,121,93, .7);
+  transform: scale(1.1);
+  cursor: pointer
+}
+.card:hover .btn{
+  transform: scale(1.4);
+  color: black;
+}
+
+.btn {
+  transition: all .3s ease-in-out;
+  font-size: 14px;
+}
+
+.card-img {
+  margin-top: -5vw;
+}
+img {
+  width: 200px;
+}
+
+.card-header {
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  color: white;
+  margin: 25px 0;
+}
+
+.h2 {
+  font-size: 18px;
+}
+
+.p {
+  font-size: 14px;
+  text-align: center;
+  color: white;
+  margin: 8px 0;
+}
+
+.price {
+  font-size: 25px;
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.span {
+  font-size: 15px;
+  display: inline-block;
+  vertical-align: top;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+
+.slide{
+  transition: all 1.5s ease-in-out;
+  transform: translate(250%,0);
+}
+
+
+
+.flex-column {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+
+.flex-row {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: row;
 }
