--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -6,7 +6,7 @@
     font-size: 12px;
 }
 .footer .fa{
-    width: 50px;
+    width: 20px;
     height: 50px;
     color: black;
 }
@@ -16,4 +16,33 @@
     text-align: center;
     color: black;
     padding-bottom: 25px;
+    margin-left: 4%;
+    width: 300px;
+}
+
+.social {
+    margin-left: 3%;
+}
+
+.flex-row{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: row;
+}
+
+.flex-column{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+}
+
+.privacy {
+    margin-top: -1%;
+}
+
+.privacy p:hover{
+    color: white;
+    cursor: pointer;
 }
