--- a/src/components/articles/articles.css
+++ b/src/components/articles/articles.css
@@ -1,15 +1,15 @@
 .flex-around {
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
+
 }
 
 .cover-articles {
+    display: flex;
+    align-items: center;
+    justify-content: center;
     position: relative;
     width: 100%;
-    height: 500px;
-    padding-left: 6%;
-    top: 0;
+    height: 700px;
+
     background-image: url("../../static/cover-opacity.png");
     background-size: cover;
     background-color: grey;
@@ -25,10 +25,9 @@
     background-color: #d4dbe0;
     height: 600px;
     justify-content: space-around;
-}
-.powders {
-
-
+    display: flex;
+    align-items: center;
+    flex-direction: row;
 }
 .powders {
     background-image: url("../../static/cover.jpg");
@@ -62,4 +61,37 @@
 
 .shortcut:hover {
     transform: scale(1.1);
+    font-size: 1.5em;
+    cursor: pointer;
+}
+
+.right {
+    transform: scale(0.5);
+    opacity: 0.5;
+}
+.left {
+    transform: scale(0.6);
+    opacity: 0.5;
+}
+
+@media screen and (max-width: 960px) {
+    .shortcut-images{
+        flex-direction: column;
+    }
+
+    .shortcut {
+        width: 80%;
+        margin: 10px;
+    }
+
+    .left {
+        display: none;
+    }
+    .right {
+        display: none;
+    }
+
+    .center {
+        width: 80%;
+    }
 }
