--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -6,6 +6,7 @@
     align-items: center;
     font-size: 1.2rem;
     position: sticky;
+    position: -webkit-sticky;
     top: 0;
     z-index: 999;
 }
@@ -86,7 +87,7 @@
     display: none;
 }
 
-@media screen and (max-width: 960px) {
+@media screen and (max-width: 820px) {
     .logo-img{
         width: 40px;
     }
@@ -95,7 +96,8 @@
         font-size: 16px;
     }
     .navbar-logo{
-        padding-right: 20px;
+        margin:0;
+        padding: 0;
     }
     .nav-menu {
         display: flex;
@@ -141,7 +143,7 @@
         margin: 0;
         font-size: 1.8rem;
         cursor: pointer;
-        padding-left: 100%;
+        padding-left: 50%;
         z-index: 4;
         width: 20px;
     }
