--- a/src/components/home/home.css
+++ b/src/components/home/home.css
@@ -42,6 +42,7 @@
     color: black;
     padding-top: 20px;
     font-size: 2em;
+    text-align: center;
 }
 .gallery-element {
     flex-direction: row;
