--- a/src/components/articles/ArticlesCarousel.css
+++ b/src/components/articles/ArticlesCarousel.css
@@ -5,11 +5,36 @@
     position: relative;
     width: 100%;
     height: 700px;
-
     background-image: url("../../static/cover-opacity.png");
     background-size: cover;
     background-color: grey;
     background-position: center;
     background-repeat: no-repeat;
     z-index: 1;
+}
+
+.right {
+    transform: scale(0.5);
+    opacity: 0.5;
+}
+.left {
+    transform: scale(0.6);
+    opacity: 0.5;
+}
+
+@media screen and (max-width: 960px) {
+    .cover-articles{
+        padding-right: 4%;
+        justify-content:space-around;
+    }
+    .left {
+        display: none;
+    }
+    .right {
+        display: none;
+    }
+
+    .center {
+        width: 80%;
+    }
 }
