--- a/src/components/articles/ArticlesCarousel.css
+++ b/src/components/articles/ArticlesCarousel.css
@@ -13,6 +13,17 @@
     z-index: 1;
 }
 
+.sliding-arrow {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 5%;
+    height: 15%;
+}
+
+.sliding-arrow:hover{
+    cursor: pointer;
+}
 .right {
     transform: scale(0.5);
     opacity: 0.5;
@@ -22,10 +33,9 @@
     opacity: 0.5;
 }
 
-@media screen and (max-width: 960px) {
+@media screen and (max-width: 650px) {
     .cover-articles{
-        padding-right: 4%;
-        justify-content:space-around;
+
     }
     .left {
         display: none;
@@ -36,5 +46,17 @@
 
     .center {
         width: 80%;
+    }
+    .sliding-arrow {
+        width: auto;
+        background-color: black;
+        padding-right: 6px;
+        margin: 0;
+    }
+    .sliding-arrow i{
+        color: white;
+    }
+    .right-arr {
+        margin-right: 2%
     }
 }
