--- a/src/components/contactUs/ContactUs.css
+++ b/src/components/contactUs/ContactUs.css
@@ -11,13 +11,13 @@
     font-size: 2rem;
     text-transform: uppercase;
     height: 80px;
-    padding: 10%;
+    padding-top: 20px;
     width: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
     text-align: center;
-    margin-top: -5%;
+
 }
 
 .contact-form {
@@ -28,7 +28,7 @@
     align-items: center;
     flex-direction: column;
     justify-content: center;
-    margin-top: -8%;
+
 }
 
 
@@ -57,6 +57,7 @@ input {
     transition: all .3s ease-in-out;
 }
 .email-input::placeholder{
+    font-weight: normal;
     transition: all .3s ease-in-out;
 }
 .email-input:focus::placeholder {
@@ -151,7 +152,15 @@ p{
 @media all and (max-width: 960px) {
     .message-text{
         width: 90%;
-        max-width: 90%;
+        height: 400px;
+        resize: none;
+    }
+
+    .max-length{
+        font-size: 1rem;
+        align-self: flex-start;
+        margin-left: 4%;
+        margin-top: 5px;
     }
 }
 
