--- a/src/components/articles/article-page/articlePage.css
+++ b/src/components/articles/article-page/articlePage.css
@@ -1,5 +1,10 @@
 .article-container {
     background-color:  #d4dbe0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    width: 100%;
 }
 
 .inner-article-container {
@@ -7,12 +12,11 @@
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    width: 60%;
-    margin-left: 5%;
+    width: 80%;
 }
 
 .inner-article-container h1{
-    width: 60%;
+    width: 90%;
     text-align: center;
 }
 
@@ -56,6 +60,22 @@
     width: 100%;
 }
 
+.whats-next {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+}
+
+.whats-next-title {
+    background-color: grey;
+    width: 100%;
+    height: 100px;
+    display: flex;
+    align-items: center;
+    justify-content:center;
+}
 
 @media all and (max-width: 700px){
     .abstract {
