--- a/src/components/articles/articles.css
+++ b/src/components/articles/articles.css
@@ -50,6 +50,19 @@
     cursor: pointer;
 }
 
+.trending {
+    background-color: grey;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+}
+
+.trending-title {
+    height: 100px;
+}
+
 
 @media screen and (max-width: 960px) {
     .shortcut-images{
