--- a/src/components/articles/ArticlesCarousel.css
+++ b/src/components/articles/ArticlesCarousel.css
@@ -5,7 +5,7 @@
     position: relative;
     width: 100%;
     height: 700px;
-    background-image: url("../../static/cover-opacity.png");
+    background-image: url("../../static/cover-opacity.webp");
     background-size: cover;
     background-color: grey;
     background-position: center;
