--- a/src/components/articles/article-page/articlePage.css
+++ b/src/components/articles/article-page/articlePage.css
@@ -7,6 +7,13 @@
     width: 100%;
 }
 
+.title-image{
+    width: 100%;
+}
+.title-image img{
+    width:100%
+}
+
 .inner-article-container {
     display: flex;
     justify-content: center;
@@ -34,6 +41,9 @@
     align-items: center;
 }
 
+.gif {
+    width: 45%;
+}
 .abstract {
     max-width: 25%;
     width: 50%;
@@ -76,6 +86,21 @@
     align-items: center;
     justify-content:center;
 }
+.zoom-article-cover{
+    position: relative;
+    overflow: hidden;
+    padding-bottom: 42%;
+    width: 100%;
+}
+.zoom-article-cover img{
+    position: absolute;
+    left: 50%;
+    max-width: 200%;
+    width: 100%;
+    transform: translate3d(-50%, -15%,0);
+    /* Thanks  @bastian_fiessinger. Use when activating blur effect:
+    will-change: -webkit-filter, filter, transform; */
+}
 
 @media all and (max-width: 700px){
     .abstract {
@@ -89,5 +114,9 @@
     .inner-article-container p{
         width: 90%;
         margin: 0;
+    }
+
+    .gif {
+        width: 90%;
     }
 }
