--- a/src/components/home/home.css
+++ b/src/components/home/home.css
@@ -18,7 +18,7 @@
     height: 600px;
     left: 0;
     top: 0;
-    background-image: url("../../static/cover.jpg");
+    background-image: url("../../static/cover.webp");
     background-size: cover;
     background-color: grey;
     background-position: center;
@@ -53,7 +53,7 @@
     justify-content: center;
 }
 .gallery-element img{
-    width: 35%;
+    width: 30%;
     transition: all .3s ease-in-out;
     padding: 2%;
 }
@@ -120,18 +120,26 @@
     .logo-write {
         height: 150px;
     }
+
     .gallery-element{
         flex-direction: column;
         justify-content: center;
+        margin: 0;
     }
     .gallery-element p{
         align-self: center;
-        width: 80%;
+        text-align: center;
+        font-size: 1.3rem;
+        width: 90%;
         padding: 1%;
     }
     .gallery-element img{
-        width: 70%;
+        width: 90%;
     }
+    .last {
+        margin-bottom: 20px;
+    }
+
     .whoarewe-row img{
         width: 50%;
         margin: 0;
