--- a/src/components/articles/trending/trending.css
+++ b/src/components/articles/trending/trending.css
@@ -1,15 +1,24 @@
 .trending-list {
     display: flex;
-    justify-content: center;
+    justify-content: space-evenly;
     align-items: center;
     flex-direction: row;
     flex-wrap: wrap;
     background-color: #d4dbe0;
+}
+.trending-list .article-card{
+    width: 25%;
+    padding: 5%
 }
 
 @media all and (max-width: 960px) {
     .trending-list{
         flex-direction: column;
         width: 100%;
+    }
+
+    .trending-list .article-card{
+        width: 80%;
+        margin: 10px;
     }
 }
