--- a/src/components/articles/article-card/ArticleCard.css
+++ b/src/components/articles/article-card/ArticleCard.css
@@ -2,11 +2,22 @@
     width: 25%;
     z-index: 3;
     opacity: 1;
+    transition: all 0.3s ease-in-out;
+
+}
+
+.center:hover{
+    cursor: pointer;
+}
+
+.center:hover .image-wrapper img{
+    transform: scale(1.2);
 }
 
 .image-wrapper {
-    width: 100%;
-    max-height: 360px;
+    width: 80%;
+    max-width: 80%;
+    max-height: 340px;
     overflow: hidden;
     display: flex;
     justify-content: center;
@@ -14,7 +25,8 @@
 }
 
 .article-card img{
-    width: 80%;
+    width: 100%;
+    transition: all 0.3s ease-in-out;
 }
 
 .flex-column {
