--- a/src/App.css
+++ b/src/App.css
@@ -31,7 +31,7 @@ li{
 }
 
 .main-content{
-  background-color: grey;
+  background-color: var(--primary);
   position: relative;
   width: 100%;
   height: 100%;
@@ -60,7 +60,7 @@ li{
   padding-top: 20px;
   z-index: 3;
 }
-@media screen and (max-width: 960px) {
+@media screen and (max-width: 820px) {
   .card{
     width: 75%
   }
