--- a/src/components/about/About.css
+++ b/src/components/about/About.css
@@ -1,5 +1,5 @@
 .about-container {
-    background-color: #d4dbe0;
+    background-color: var(--accent);
     margin: 0;
     display: flex;
     align-items: center;
@@ -25,7 +25,7 @@
 .link-to-contacts {
     text-decoration: none;
     padding: 5px;
-    color: grey;
+    color: var(--primary);
 }
 .contact-link-container{
     margin-bottom: 30px;
@@ -47,12 +47,12 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    color: grey;
+    color: var(--primary);
 }
 
 
 
-@media all and (max-width: 700px){
+@media all and (max-width: 820px){
     .me {
         width: 80%;
     }
