--- a/src/components/articles/article-page/articlePage.css
+++ b/src/components/articles/article-page/articlePage.css
@@ -1,5 +1,5 @@
 .article-container {
-    background-color:  #d4dbe0;
+    background-color:  var(--accent);
 }
 
 .gif {
@@ -22,6 +22,27 @@
     will-change: -webkit-filter, filter, transform; */
 }
 
+.art-body h4{
+    font-size: 2rem;
+
+}
+.sum-up{
+    margin-top: 0;
+    padding: 2%;
+}
+.sum-up li{
+    font-size: 1.5rem;
+}
+
+
+.art-body span{
+    display: flex;
+    justify-content: center;
+    width: 75%;
+    text-align: center;
+    margin-left: 10%;
+    font-style: italic;
+}
 @media all and (max-width: 820px){
     .art-body{
         width: 95% !important;
