--- a/src/components/articles/trending/trending.css
+++ b/src/components/articles/trending/trending.css
@@ -4,14 +4,14 @@
     align-items: center;
     flex-direction: row;
     flex-wrap: wrap;
-    background-color: #d4dbe0;
+    background-color: var(--accent);
 }
 .trending-list .article-card{
     width: 25%;
     padding: 5%
 }
 
-@media all and (max-width: 960px) {
+@media all and (max-width: 820px) {
     .trending-list{
         flex-direction: column;
         width: 100%;
