--- a/src/components/contactUs/ContactUs.css
+++ b/src/components/contactUs/ContactUs.css
@@ -1,6 +1,6 @@
 .contact-us{
     width: 100%;
-    background-color: #d4dbe0;
+    background-color: var(--accent);
     display: flex;
     align-items: center;
     flex-direction: column;
@@ -34,10 +34,10 @@
 .name-input {
     font-family: inherit;
     border: 0;
-    border-bottom: 2px solid grey;
+    border-bottom: 2px solid var(--primary);
     outline: 0;
     font-size: 1.3rem;
-    color: grey;
+    color: var(--primary);
     background: transparent;
     transition: border-color 0.2s;
 }
@@ -66,10 +66,10 @@
     margin-top: 0;
     font-family: inherit;
     border: 0;
-    border-bottom: 2px solid grey;
+    border-bottom: 2px solid var(--primary);
     outline: 0;
     font-size: 1.3rem;
-    color: grey;
+    color: var(--primary);
     background: transparent;
     transition: border-color 0.2s;
     margin-bottom: -2%;
@@ -87,7 +87,7 @@
     min-height: 200px;
     min-width: 50%;
     max-width: 90%;
-    background-color: #d4dbe0;
+    background-color: var(--accent);
     font-size: 1.3rem;
     padding: 10px;
     color:  #9b9b9b;
@@ -128,7 +128,7 @@
     cursor: pointer;
 }
 
-@media all and (max-width: 960px) {
+@media all and (max-width: 820px) {
     .message-text{
         width: 90%;
         height: 400px;
