--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -1,5 +1,5 @@
 .footer {
-    background-color: grey;
+    background-color: var(--primary);
     position: relative;
     width: 100%;
     color: black;
@@ -47,7 +47,7 @@
     cursor: pointer;
 }
 
-@media screen and (max-width: 960px) {
+@media screen and (max-width: 820px) {
 
     .social {
         margin: 0;
