--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -1,5 +1,5 @@
 .navbar {
-    background-color: grey;
+    background-color: var(--primary);
     height: 80px;
     display: flex;
     justify-content: center;
@@ -88,6 +88,7 @@
     display: none;
 }
 
+
 @media screen and (max-width: 820px) {
     .logo-img{
         width: 40px;
@@ -141,7 +142,7 @@
     }
 
     .nav-item:hover {
-        background-color: grey;
+        background-color: var(--primary);
         color: #242424;
         border-radius: 0;
     }
