--- a/src/components/home/home.css
+++ b/src/components/home/home.css
@@ -3,7 +3,7 @@
     position: relative;
     left: 0;
     top: 0;
-    background-color: grey;
+    background-color: var(--primary);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -20,7 +20,7 @@
     top: 0;
     background-image: url("../../static/cover.webp");
     background-size: cover;
-    background-color: grey;
+    background-color: var(--primary);
     background-position: center;
     background-repeat: no-repeat;
 }
@@ -34,7 +34,7 @@
 }
 
 .gallery {
-    background-color: #d4dbe0;
+    background-color: var(--accent);
     width: 100%;
     flex-direction: column;
 }
@@ -117,7 +117,7 @@
 }
 
 
-@media screen and (max-width: 960px) {
+@media screen and (max-width: 820px) {
     .cover {
         height: 350px;
     }
