--- a/src/components/products/powders.css
+++ b/src/components/products/powders.css
@@ -2,7 +2,7 @@
     border-radius: 5px;
     display: flex;
     flex-direction: column;
-    background-color: grey;
+    background-color: var(--primary);
     margin: 10px;
     padding: 3px;
     width: 350px;
