--- a/src/shared/styles/SharedStyles.css
+++ b/src/shared/styles/SharedStyles.css
@@ -3,7 +3,7 @@
     top: 0;
     text-align: center;
     height: 80px;
-    background-color: grey;
+    background-color: var(--primary);
     width: 100%;
     z-index: 910;
     flex-direction: row;
@@ -62,6 +62,9 @@
 @media all and (max-width: 820px){
 
     .sticky-title{
-        z-index: 1
+        z-index: 1;
+    }
+    .sticky-title h1 {
+        padding: 0;
     }
 }
