--- a/src/components/contactUs/ContactUs.css
+++ b/src/components/contactUs/ContactUs.css
@@ -118,11 +118,15 @@
 .button-send {
     color: #9b9b9b;
     display: flex;
+    flex-direction: row;
     align-items: center;
     justify-content: center;
-    width: 20%;
+    width: 12%;
     height: 70px;
-    margin: 5%
+    margin: 5%;
+    border-bottom: 1px grey solid;
+    border-top: 1px grey solid;
+    border-radius: 5px;
 }
 .button-send:hover{
     cursor: pointer;
@@ -140,6 +144,10 @@
         align-self: flex-start;
         margin-left: 4%;
         margin-top: 5px;
+    }
+    .button-send {
+        border-radius: 10px;
+        width: 50%;
     }
 }
 
