--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -73,7 +73,14 @@
     padding: 0.2rem 1rem;
     height: 100%;
 }
-
+.nav-item{
+    font-size: 14px;
+    margin-left: 15px;
+    padding: 10px;
+    box-sizing: border-box;
+    cursor: pointer;
+    float: left;
+}
 
 
 .fa-bars {
