--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -133,12 +133,13 @@
         z-index: 3;
     }
     .nav-item {
-        width: 50%;
+        width: 100%;
         height: 10%;
         margin: 0;
         display: flex;
         justify-content: center;
         align-items: center;
+        padding-left:20%
     }
     .nav-links {
         margin: 0;
