ensmallen font-size of artcle page for mobile

--- a/src/components/articles/article-page/articlePage.css
+++ b/src/components/articles/article-page/articlePage.css
@@ -47,6 +47,7 @@
     .art-body{
         width: 95% !important;
         padding-right: 0 !important;
+        font-size: 1.2rem;
     }
     .gif {
         width: 90%;
