--- a/src/components/articles/trending/trending.css
+++ b/src/components/articles/trending/trending.css
@@ -1,6 +1,6 @@
 .trending-list {
     display: flex;
-    justify-content: space-evenly;
+    justify-content: center;
     align-items: center;
     flex-direction: row;
     flex-wrap: wrap;
@@ -8,7 +8,8 @@
 }
 .trending-list .article-card{
     width: 25%;
-    padding: 5%
+    height: 430px;
+    margin: 5%;
 }
 
 @media all and (max-width: 820px) {
@@ -19,6 +20,7 @@
 
     .trending-list .article-card{
         width: 80%;
-        margin: 10px;
+        margin: 5%;
+        height: 350px;
     }
 }
