--- a/src/components/contactUs/ContactUs.css
+++ b/src/components/contactUs/ContactUs.css
@@ -132,7 +132,25 @@
     cursor: pointer;
 }
 
+.toast-message{
+    position: fixed;
+    width: 100vw;
+    height: 10%;
+    background-color: grey;
+    top: 80px;
+    left: 0;
+    z-index: 999;
+    animation: ease-in-out fade-in 0.4s;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: white;
+}
+
 @media all and (max-width: 820px) {
+    .contact-bar {
+        width: 95%;
+    }
     .message-text{
         width: 90%;
         height: 400px;
@@ -151,52 +169,12 @@
     }
 }
 
-/* reset input
-.name-input:invalid{
-    background-color: white;
-}
- demo */
-
-
-/*
-.name-input::placeholder {
-    color: transparent;
-}
-
-.name-label {
-    position: absolute;
-    top: 120px;
-    left: 30px;
-    display: block;
-    transition: 0.2s;
-    font-size: 1rem;
-    color: #9b9b9b;
-}
-
-.name-input:focus ~ .name-label {
-    position: absolute;
-    top: 100px;
-    left: 30px;
-    display: block;
-    transition: 0.2s;
-    font-size: 0.8rem;
-    color: #11998e;
-    font-weight: 700;
-}
-*/
-
-/*
-@media all and (max-width: 960px) {
-    .name-label {
-        top: 100px;
-        left: 10px;
+@keyframes fade-in {
+    0% {
+        top: 0;
+        z-index: 1;
     }
-
-    .name-input:focus ~ .name-label {
+    100% {
         top: 80px;
-        left: 10px;
-        font-size: 0.8rem;
     }
 }
-
- */
