--- a/src/components/articles/ArticlesCarousel.css
+++ b/src/components/articles/ArticlesCarousel.css
@@ -19,8 +19,11 @@
     top: 0;
     height: 70px;
     font-size: 2rem;
-    padding-left: 4%;
     text-align: left;
+}
+
+.trending-carousel h1{
+    padding-left: 4%;
 }
 
 .sliding-arrow {
