--- a/src/components/articles/article-page/articlePage.css
+++ b/src/components/articles/article-page/articlePage.css
@@ -26,6 +26,10 @@
     font-size: 2rem;
 
 }
+
+.art-body img {
+    width: 100%;
+}
 .sum-up{
     margin-top: 0;
     padding: 2%;
@@ -35,7 +39,7 @@
 }
 
 
-.art-body span{
+#center-span{
     display: flex;
     justify-content: center;
     width: 75%;
@@ -55,4 +59,19 @@
     .gif {
         width: 90%;
     }
+}
+
+
+.markup h4{
+    font-size: 2rem;
+}
+.markup img {
+    width: 100%;
+}
+
+.markup {
+    display: flex;
+    flex-direction: column;
+    margin: 0;
+    padding: 0;
 }
