--- a/src/components/contactUs/ContactUs.css
+++ b/src/components/contactUs/ContactUs.css
@@ -139,12 +139,25 @@
     background-color: grey;
     top: 80px;
     left: 0;
-    z-index: 999;
+    z-index: 992;
     animation: ease-in-out fade-in 0.4s;
     display: flex;
     align-items: center;
     justify-content: center;
+    text-align: center;
     color: white;
+    font-size: 1.4rem;
+}
+
+.thanks-div {
+    min-height: var(--content-min-height);
+    background-color: var(--accent);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    font-size: 2rem;
+    text-align: center;
 }
 
 @media all and (max-width: 820px) {
