--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -1,6 +1,6 @@
 .navbar {
     background-color: var(--primary);
-    height: 80px;
+    height: var(--navbar-height);
     display: flex;
     justify-content: center;
     align-items: center;
@@ -8,7 +8,7 @@
     position: sticky;
     position: -webkit-sticky;
     top: 0;
-    z-index: 900;
+    z-index: 994;
 }
 
 .navbar-container {
@@ -130,7 +130,7 @@
     .nav-menu.active {
         position: fixed;
         transform: translate3d(0, 25vh, 0);
-        z-index: 3;
+        z-index: 994;
     }
     .nav-item {
         width: 100%;
@@ -161,7 +161,7 @@
         font-size: 1.8rem;
         cursor: pointer;
         margin-left: 80vw;
-        z-index: 4;
+        z-index: 995;
         width: 20px;
     }
 
