implement backend error handle

--- a/src/components/comment-section/commentSection.css
+++ b/src/components/comment-section/commentSection.css
@@ -19,7 +19,6 @@
 
 .comments-title {
     font-size: 2rem;
-
 }
 
 .comment-body {
@@ -42,5 +41,9 @@
 @media all and (max-width: 820px) {
     .comment-container {
         width: 85%;
+    }
+
+    .comments-title {
+        width: 90%;
     }
 }
