--- a/src/components/comment-section/commentSection.css
+++ b/src/components/comment-section/commentSection.css
@@ -27,16 +27,79 @@
 }
 
 .reactions{
-    width: 100%;
-    display: flex;
+    display: none;
+    width: 90%;
     justify-content: space-evenly;
-    margin-bottom: 55px;
+    margin-bottom: 30px;
 }
 
-.fa-fire{
-    color: red !important;
+
+.own-comment{
+    width: 60%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 20px;
 }
 
+.likes{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin: 0 20px 0 20px;
+}
+
+.counts {
+    margin: 10px 0 0 10px;
+    text-align: center;
+}
+
+.comment-text{
+    min-height: 75px;
+    max-height: 75px;
+    max-width: 80%;
+    min-width: 80%;
+    background-color: var(--accent);
+    font-size: 1.3rem;
+    padding: 10px;
+    color:  #9b9b9b;
+}
+.comment-text:focus {
+    font-weight: 700;
+    border-width: 3px;
+}
+
+.comment-text::placeholder{
+    transition: all .3s ease-in-out;
+}
+.comment-text:focus::placeholder {
+    color: transparent;
+    font-weight: normal;
+}
+
+.be-the-first {
+    font-size: 1.4rem;
+    text-align: center;
+}
+
+.btn-send {
+    color: #9b9b9b;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    width: 12%;
+    height: 70px;
+    margin: 5%;
+    border-bottom: 1px grey solid;
+    border-top: 1px grey solid;
+    border-radius: 5px;
+}
+.btn-send:hover{
+    cursor: pointer;
+}
 
 @media all and (max-width: 820px) {
     .comment-container {
@@ -45,5 +108,16 @@
 
     .comments-title {
         width: 90%;
+    }
+
+    .own-comment{
+        width: 100%;
+    }
+    .reactions {
+        display: flex;
+    }
+
+    .btn-send {
+        width: 30%;
     }
 }
