--- a/src/shared/styles/SharedStyles.css
+++ b/src/shared/styles/SharedStyles.css
@@ -1,5 +1,6 @@
 .sticky-title {
     position: sticky;
+    position: -webkit-sticky;
     top: 0;
     text-align: center;
     height: 80px;
@@ -55,8 +56,9 @@
     font-size: 1.5rem;
 }
 
-.pr-10 {
-    padding-right: 10%;
+.p-10 {
+    padding-right: 5%;
+    padding-left: 3%;
 }
 
 @media all and (max-width: 820px){
