--- a/src/App.css
+++ b/src/App.css
@@ -130,3 +130,12 @@ img {
   justify-content: center;
   flex-direction: row;
 }
+
+#netlify-identity-widget{
+  position: absolute;
+  top: 20% !important;
+  left: 10% !important;
+  width: 80% !important;
+  height: 65% !important;
+  overflow: auto !important;
+}
