--- a/src/components/comment-section/commentSection.css
+++ b/src/components/comment-section/commentSection.css
@@ -8,13 +8,26 @@
 
 .comment-container{
     width: 50%;
+    margin-bottom: 15px;
 }
 
 .user-date {
+    display: flex;
     font-size: 1.3rem;
     height: 5%;
     padding: 0;
     margin: 0;
+    color: var(--social)
+}
+
+.little-circle{
+    height: 8px;
+    width: 8px;
+    border: 2px solid var(--social);
+    border-radius: 50%;
+    margin-top:6px;
+    margin-left: 10px;
+    margin-right: 10px;
 }
 
 .comments-title {
@@ -22,8 +35,13 @@
 }
 
 .comment-body {
+    border-right : 2px grey solid;
+    border-left : 2px grey solid;
+    border-bottom : 2px grey solid;
     padding: 10px;
     font-size: 1.2rem;
+    width: 80%;
+    margin-left: 5%
 }
 
 .reactions{
