--- a/src/index.css
+++ b/src/index.css
@@ -17,6 +17,7 @@ code {
   --mobiletransition: 820px;
   --primary: grey;
   --accent: #d4dbe0;
+  --social: #6CB4EE;
   --navbar-height: 8.4vh;
   --footer-height: 15vh;
   --content-min-height: 76.6vh;
@@ -28,5 +29,11 @@ code {
     --navbar-height: 13vh;
     --footer-height: 27vh;
     --content-min-height: 60vh;
+  }
+}
+
+@media all and (max-width: 820px){
+  .modalContainer{
+    width: 80% !important
   }
 }
