--- a/src/components/articles/article-page/articlePage.css
+++ b/src/components/articles/article-page/articlePage.css
@@ -114,10 +114,11 @@
 
 @media all and (max-width: 820px){
     .art-body{
-        width: 95% !important;
+        width: 92% !important;
         padding-right: 0 !important;
         font-size: 1.2rem;
         border: none;
+        margin-left: 0
     }
     h1 {
         font-size: 1.4rem;
