--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -32,7 +32,7 @@
 }
 .logo-img{
     width: 40px;
-    margin-bottom: 10px;
+    margin-top: 5px;
     margin-right: 15px;
 }
 .logo-img:hover{
@@ -89,6 +89,11 @@
 
 .nav-links-mobile {
     display: none;
+}
+
+.welcome-user {
+    width: 20%;
+    margin-left: 5%
 }
 
 .menu-icon {
