--- a/src/components/articles/article-card/ArticleCard.css
+++ b/src/components/articles/article-card/ArticleCard.css
@@ -40,7 +40,7 @@
 .card-title{
     color: white;
     font-size: 2em;
-    padding-bottom: 3%;
+    padding-bottom: 2%;
     text-align: center;
 }
 
@@ -49,6 +49,27 @@
     background-color: var(--primary);
     width: 74%;
     max-height: 150px;
+}
+
+.preview {
+    width: 40% !important;
+    height: 100% !important;
+}
+
+.article-preview{
+    width: 74%;
+    padding: 0 3% 0 3%;
+    font-size: 1.2rem;
+    color: white;
+    background-color: var(--primary);
+    background-image: linear-gradient(to bottom, transparent, var(--accent));
+}
+
+.article-preview .read-more {
+    width: 100%;
+    padding-top: -10px;
+    text-align: center;
+    color: var(--primary);
 }
 
 @media screen and (max-width: 820px) {
@@ -60,6 +81,10 @@
     }
     .card-title {
         font-size: 1.4rem;
+    }
+
+    .preview {
+        width: 90% !important;
     }
 }
 
