--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -49,12 +49,20 @@
 }
 
 @media screen and (max-width: 820px) {
-
+    .footer .fa {
+        height: 100%;
+    }
     .social {
         margin: 0;
         padding-right: 5px;
     }
     .footer p{
         width: 100%;
+        padding-bottom: 0;
+        font-size: 14px;
+    }
+
+    .privacy {
+        margin-top: -6%;
     }
 }
