--- a/src/index.css
+++ b/src/index.css
@@ -20,6 +20,7 @@ code {
   --primary: grey;
   --accent: #d4dbe0;
   --social: #6CB4EE;
+  --link: #4f86f7;
   --navbar-height: 8.4vh;
   --footer-height: 15vh;
   --content-min-height: 76.6vh;
