--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -48,6 +48,60 @@
     cursor: pointer;
 }
 
+.whoarewe{
+    width: 100%;
+    margin-bottom: 20px;
+    color: white;
+    font-size: 2.5em;
+}
+
+.whoarewe-row{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-evenly;
+    margin-bottom: 5%;
+}
+
+.whoarewe-row p{
+    color: white;
+    width: 30%;
+    font-size: 1.5em;
+}
+
+.whoarewe-row img{
+    width: 30%;
+    transition: all .3s ease-in-out;
+}
+
+.find-out-more {
+    margin: 0;
+    width: 40%;
+    flex-direction: column;
+}
+
+.find-out-more p{
+    width: 75%;
+}
+.find-out-more-btn {
+    text-align: center;
+    width: 30%;
+    height: 70px;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+.find-out-more-btn p{
+    width: 100%;
+    color: var(--primary);
+}
+
+.dFlex {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 @media screen and (max-width: 820px) {
     .footer .fa {
         height: 100%;
@@ -64,5 +118,29 @@
 
     .privacy {
         margin-top: -6%;
+    }
+
+    .whoarewe-row img{
+        width: 80%;
+        margin-bottom: 40px;
+    }
+    .whoarewe-row p{
+        width: 75%;
+        margin-bottom: 20px;
+        text-align: center;
+    }
+    .whoarewe-row{
+        flex-direction: column;
+    }
+    .find-out-more {
+        width: 90%;
+
+    }
+    .find-out-more p{
+        width: 90%;
+    }
+    .find-out-more-btn {
+        width: 55%;
+        margin-top: 20px;
     }
 }
