--- a/src/shared/styles/SharedStyles.css
+++ b/src/shared/styles/SharedStyles.css
@@ -40,6 +40,10 @@
     background-color: var(--accent);
 }
 
+.bg-primary {
+    background-color: var(--primary);
+}
+
 .color-primary {
     color: var(--primary);
 }
