--- a/src/components/articles/article-card/CarouselArticleCard.css
+++ b/src/components/articles/article-card/CarouselArticleCard.css
@@ -21,6 +21,7 @@
     position: absolute;
     width: 35%;
     height: 720px;
+    cursor: pointer;
 }
 
 .carousel-card-title {
@@ -32,7 +33,7 @@
     left: 50%;
     top: 50%;
     transform: translate(-50%, -50%);
-
+    cursor: pointer;
     width: 25%;
     height: 30%;
     border: 10px solid white;
