--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -92,8 +92,12 @@
 }
 
 .welcome-user {
-    width: 20%;
-    margin-left: 5%
+    width: 25%;
+    color: var(--accent);
+    padding-top: 8px;
+    padding-left: 5%;
+    font-size: 1.5rem;
+    /*margin-left: 5%*/
 }
 
 .menu-icon {
@@ -185,4 +189,10 @@
         color: var(--social)
     }
 
+}
+
+@media screen and (max-width: 1400px){
+    .welcome-user{
+        display: none;
+    }
 }
